SettingToAlarm() 버그 수정

--- a/PSVA.vbproj
+++ b/PSVA.vbproj
@@ -120,6 +120,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <Compile Include="src\secure\Sstring.vb" />
     <Compile Include="src\Startup.vb" />
   </ItemGroup>
   <ItemGroup>
