alarmlist 업데이트 시 알람 초기화 업뎃 및 버그수정

--- a/PSVA.vbproj
+++ b/PSVA.vbproj
@@ -73,6 +73,11 @@
     <Import Include="System.Threading.Tasks" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="My Project\Resources.Designer.vb">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
     <Compile Include="src\AlarmListEventListener.vb" />
     <Compile Include="src\Events.vb" />
     <Compile Include="src\Alarm.vb" />
@@ -123,11 +128,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Application.myapp</DependentUpon>
     </Compile>
-    <Compile Include="My Project\Resources.Designer.vb">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
     <Compile Include="My Project\Settings.Designer.vb">
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
@@ -142,9 +142,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
+      <LastGenOutput>Resources.Designer.vb</LastGenOutput>
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\AlarmSettingShellFOrm.resx">
       <DependentUpon>AlarmSettingShellForm.vb</DependentUpon>
@@ -172,6 +172,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="src\image\ic_autorenew_black_24dp.png" />
     <Content Include="src\image\ic_alarm_add_black_24dp.png" />
     <Content Include="src\image\ic_done_black_24dp.png" />
     <Content Include="src\image\ic_info_black_24dp.png" />
