--- a/PSVA.vbproj
+++ b/PSVA.vbproj
@@ -88,6 +88,12 @@
     <Compile Include="src\gui\Alarm.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="src\gui\AlarmCreateWnd.Designer.vb">
+      <DependentUpon>AlarmCreateWnd.vb</DependentUpon>
+    </Compile>
+    <Compile Include="src\gui\AlarmCreateWnd.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="src\gui\AlarmSettingShellForm.Designer.vb">
       <DependentUpon>AlarmSettingShellForm.vb</DependentUpon>
     </Compile>
@@ -145,6 +151,9 @@
       <CustomToolNamespace>My.Resources</CustomToolNamespace>
       <SubType>Designer</SubType>
       <LastGenOutput>Resources.Designer.vb</LastGenOutput>
+    </EmbeddedResource>
+    <EmbeddedResource Include="src\gui\AlarmCreateWnd.resx">
+      <DependentUpon>AlarmCreateWnd.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\AlarmSettingShellFOrm.resx">
       <DependentUpon>AlarmSettingShellForm.vb</DependentUpon>
