알람이 다른 날에 울리지 않는 오류 및 기타 수정

--- a/PSVA.vbproj
+++ b/PSVA.vbproj
@@ -79,6 +79,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
     <Compile Include="src\AlarmListEventListener.vb" />
+    <Compile Include="src\AlarmRIngManager.vb" />
     <Compile Include="src\Events.vb" />
     <Compile Include="src\Alarm.vb" />
     <Compile Include="src\base.vb" />
