--- a/PSVA.vbproj
+++ b/PSVA.vbproj
@@ -47,6 +47,12 @@
   <PropertyGroup>
     <OptionInfer>On</OptionInfer>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>psva.ico</ApplicationIcon>
+  </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationManifest>My Project\app.manifest</ApplicationManifest>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -155,9 +161,11 @@
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\AlarmCreateWnd.resx">
       <DependentUpon>AlarmCreateWnd.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\AlarmSettingShellFOrm.resx">
       <DependentUpon>AlarmSettingShellForm.vb</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="src\gui\controls\AlarmPanel.resx">
       <DependentUpon>AlarmPanel.vb</DependentUpon>
@@ -170,6 +178,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
       <Generator>MyApplicationCodeGenerator</Generator>
       <LastGenOutput>Application.Designer.vb</LastGenOutput>
@@ -182,6 +191,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="psva.ico" />
     <Content Include="src\image\psva.png" />
     <None Include="src\image\ic_autorenew_black_24dp.png" />
     <Content Include="src\image\ic_alarm_add_black_24dp.png" />
